<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">ActivationDemo</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete all photos?</string>
    <string name="delete_title">Confirm</string>
    <string name="upload_title">Confirm</string>
    <string name="upload_dialog">Upload all photos to cloud?</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>


    <string name="hello_welder">Hello, Welder!</string>
    <string name="choose_task">Choose a task to start scanning</string>

    <string name="jobName">\"Job Name: %1$s\"</string>
    <string name="jobLoc">\"Job Location: %1$s\"</string>
    <string name="test_auth_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MTgxZWFiZWI5MjhiMzIzNjgyZWJmNWUiLCJlbWFpbCI6InRlc3QuZWRnZUBpbnRlbC5jb20iLCJ1c2VyTmFtZSI6IlRlc3QsIEVkZ2UiLCJyb2xlIjoidXNlciIsInByb2plY3ROYW1lIjoiVFMiLCJpYXQiOjE2NTEwODYxMTYsImV4cCI6MTY4MjYyMjExNn0.uTfWcBM7S9LFfEqW3_gk_-BqlaNVeXTgLjKvZARliCw</string>
    <string name="location">Location:</string>


</resources>
