<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_baseline_person_pin_24"/>
            <TextView
                android:id="@+id/hello_welder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_welder"
                android:layout_below="@+id/profileImage"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:id="@+id/location_dropdown_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hello_welder"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/short_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/short_margin"
                    android:layout_marginRight="@dimen/short_margin"
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/choose_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_task"
                android:layout_below="@id/location_dropdown_container"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_marginTop="40dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idTVTaskId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/choose_task"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>