<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:layoutDirection="ltr">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/photo_view_pager" >

    </androidx.viewpager.widget.ViewPager>
        <com.dji.activationDemo.ResultView
            android:background="#00000000"
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/croppedImage"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitCenter">
        </ImageView>

        <com.dji.activationDemo.ResultView2
            android:background="#00000000"
            android:id="@+id/resultView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cutout_safe_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/photo_properties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="10dp"
            android:padding="@dimen/counter_text_padding"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorBlack"
            android:textSize="@dimen/counter_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/photo_count_text"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:ems="10"
            android:padding="@dimen/counter_text_padding"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorBlack"
            android:textSize="@dimen/counter_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:contentDescription="@string/back_button_alt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_back" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/counter_text_height"
            android:layout_height="@dimen/counter_text_height"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/photo_count_text"
            app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
                    >

                    <ImageButton
                        android:id="@+id/share_button"
                        android:contentDescription="@string/share_button_alt"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_share"
                        />

                    <Button
                        android:id="@+id/detectButton"
                        android:text="Detect"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        />

                    <ImageButton
                        android:id="@+id/delete_button"
                        android:contentDescription="@string/delete_button_alt"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_delete" />


                </LinearLayout>
<!--        <ImageButton-->
<!--            android:id="@+id/share_button"-->
<!--            android:contentDescription="@string/share_button_alt"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            android:layout_marginEnd="@dimen/margin_xlarge"-->
<!--            android:layout_marginBottom="@dimen/margin_small"-->
<!--            android:layout_width="@dimen/round_button_small"-->
<!--            android:layout_height="@dimen/round_button_small"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:background="@android:color/transparent"-->
<!--            app:srcCompat="@drawable/ic_share" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/delete_button"-->
<!--            android:contentDescription="@string/delete_button_alt"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            android:layout_marginStart="@dimen/margin_xlarge"-->
<!--            android:layout_marginBottom="@dimen/margin_small"-->
<!--            android:layout_width="@dimen/round_button_small"-->
<!--            android:layout_height="@dimen/round_button_small"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:background="@android:color/transparent"-->
<!--            app:srcCompat="@drawable/ic_delete" />-->

<!--        <Button-->
<!--            android:id="@+id/detectButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Detect"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@id/delete_button"-->
<!--            app:layout_constraintStart_toStartOf="@id/share_button"-->
<!--            />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
